Update testing page for registry and new matchers.

--- a/source/plugin-authoring/_menu.haml
+++ b/source/plugin-authoring/_menu.haml
@@ -39,6 +39,7 @@
     %li
       = link_to 'Testing', '/plugin-authoring/testing/'
       %ul
+        %li= link_to 'Setup', '/plugin-authoring/testing/#setup'
         %li= link_to 'Testing adapters', '/plugin-authoring/testing/#testing-adapters'
         %li= link_to 'Testing handlers', '/plugin-authoring/testing/#testing-handlers'
         %li= link_to 'Testing routes', '/plugin-authoring/testing/#testing-routes'
