--- a/source/plugin-authoring/testing.html.haml
+++ b/source/plugin-authoring/testing.html.haml
@@ -12,37 +12,59 @@ title: "Plugin Authoring: Testing"
       .page-header.first-heading
         %h2 Testing
 
-      %p It's a core philosophy of Lita that any plugins you write for your robot should be as thoroughly tested as any other program you would write. To make this easier, Lita ships with some handy extras for <a href="https://github.com/rspec/rspec">RSpec</a> that make testing a plugin dead simple. They require the full RSpec suite (rspec-core, rspec-expectations, and rspec-mocks) version 2.14 or higher, as they use the newer "expect" syntax.
+      %p It's a core philosophy of Lita that any plugins you write for your robot should be as thoroughly tested as any other program you would write. To make this easier, Lita ships with some handy extras for <a href="https://github.com/rspec/rspec">RSpec</a> that make testing a plugin dead simple. Since Lita plugins are just Ruby code, they can be tested with any framework you like, but RSpec is recommended for its expressiveness and powerful features.
 
-      %h3#testing-adapters Testing adapters
+      %h3#setup Setup
+
+      %p If you created your plugin with the built-in generator, the files necessary for your RSpec test suite will already be in place in the <code>spec</code> directory. If you're building your plugin manually, you only need to require your plugin and Lita's RSpec extras before writing your tests. It's recommended that you put this in <code>spec/spec_helper.rb</code> and then simply require "spec_helper" in each spec file.
+
+      %pre
+        %code.ruby
+          require "lita-your-plugin"
+          require "lita/rspec"
+
+      %h3#testing-adapters Testing adapters and extensions
 
       %p To include some helpful setup for testing Lita code, require "lita/rspec", then add <code>lita: true</code> to the metadata for an example group.
+      %p Adapters and extensions should be unit tested as you would any other Ruby code. For a few workflow improvements, activate <code>Lita::RSpec</code> by passing <code>:lita</code> as RSpec metadata on your plugin's example group:
 
       %pre
         %code.ruby
           :preserve
-            require "lita/rspec"
-
             describe Lita::Adapters::MyAdapter, lita: true do
+              describe "#run" do
+                # ...
+              end
+
               # ...
             end
 
-      %p This will have the following effects:
+      %p Turning on <code>Lita::RSpec</code> will have the following effects:
 
       %ul
         %li All Redis interaction will be namespaced to a test environment and automatically cleared out before each example.
         %li Lita's logger is stubbed to prevent log messages from cluttering up your test output.
-        %li Lita's configuration is cleared out before each example, so that the first call to <code>Lita.config</code> will start from the default configuration.
+        %li A brand new <code>Lita::Registry</code> is created for each test and made accessible via the <code>registry</code> method. The registry is used to hold global state such as all the plugins Lita knows about and the user configuration.
 
-      %h3#testing-handlers Testing handlers
-
-      %p To include Lita's RSpec extras for testing a handler, require "lita/rspec", then add <code>lita_handler: true</code> to the metadata for the example group.
+      %p The first two points you don't really have to think about. The third one you will likely interact with directly. To create an instance of an adapter, you must pass a <code>Lita::Robot</code> as an argument. The robot, in turn, takes a registry as an argument. Your set up code will end looking something like this:
 
       %pre
         %code.ruby
           :preserve
-            require "lita/rspec"
+            describe Lita::Adapters::MyAdapter, lita: true do
+              let(:robot) { Lita::Robot.new(registry) }
+              subject { described_class.new(robot) }
+            end
 
+      %p At this point you'll have a functioning instance of your adapter as the test subject and can proceed normally.
+
+      %h3#testing-handlers Testing handlers
+
+      %p The setup for testing a handler is similar, but use <code>:lita_handler</code> as metadata instead.
+
+      %pre
+        %code.ruby
+          :preserve
             describe Lita::Handlers::MyHandler, lita_handler: true do
               # ...
             end
@@ -50,7 +72,7 @@ title: "Plugin Authoring: Testing"
       %p This will have the following effects, in addition to the effects of the <code>lita: true</code> metadata hook:
 
       %ul
-        %li <code>Lita.handlers</code> will return an array with only the class you're testing (<code>described_class</code>).
+        %li Your handler will automatically be added to the registry before each example.
         %li Strings sent with <code>Lita::Robot#send_messages</code> will be pushed to an array accessible as <code>replies</code> so you can make expectations about output from the robot.
         %li
           You have access to the following cached objects set with <code>let</code>:
@@ -63,65 +85,37 @@ title: "Plugin Authoring: Testing"
 
       %h4#testing-routes Testing routes
 
-      %p You can test routes (both chat and HTTP routes) and event subscriptions very easily using this syntax:
+      %p You can test routes of all types very easily using these RSpec matchers:
 
       %pre
         %code.ruby
           :preserve
-            it { routes("some message").to(:some_method) }
-            it { routes_command("directed message").to(:some_command_method) }
-            it { doesnt_route("message").to(:some_command_method) }
-            it { routes_http(:get, "/foo/bar").to(:baz) }
-            it { doesnt_route_http(:post, "/foo/bar").to(:baz) }
-            it { routes_event(:connected).to(:greet) }
-            it { doesnt_route_event(:some_other_event).to(:greet) }
+            # Chat routes
+            it { is_expected.to route("some message") }
+            it { is_expected.to route("some message").to(:some_callback) }
+            it { is_expected.to route_command("some command") }
+            it { is_expected.to route_command("some command").to(:some_other_callback) }
+            it { is_expected.to route("secret").with_authorization_for(:secret_admins).to(:secret_callback) }
 
-      %table.table.table-bordered
-        %tr
-          %th Name
-          %th Description
-        %tr
-          %td
-            %code routes
-          %td Sets an expectation that the given string will trigger the given method when overheard by the robot.
-        %tr
-          %td
-            %code routes_command
-          %td Sets an expectation that the given string will trigger the given method when directed at the robot, either in a private message, or by prefixing a message in a chat room with the robot's mention name.
-        %tr
-          %td
-            %code doesnt_route
-          %td Sets an expectation that is the inverse of the one set by <code>routes</code>. Also aliased to <code>does_not_route</code>.
-        %tr
-          %td
-            %code doesnt_route_command
-          %td Sets an expectation that is the inverse of the one set by <code>routes_command</code>. Also aliased to <code>does_not_route_command</code>.
-        %tr
-          %td
-            %code routes_http
-          %td Sets an expectation that an HTTP request with the given HTTP method and path will route to the given handler method.
-        %tr
-          %td
-            %code doesnt_route_http
-          %td Sets an expectation that is the inverse of <code>routes_http</code>. Also aliased to <code>does_not_route_http</code>.
-        %tr
-          %td
-            %code routes_event
-          %td Sets an expectation that the given event will trigger the given subscribed method.
-        %tr
-          %td
-            %code doesnt_route_event
-          %td Sets an expectation that is the inverse of <code>routes_event</code>. Also aliased to <code>does_not_route_event</code>.
+            # HTTP routes
+            it { is_expected.to route_http(:get, "/foo") }
+            it { is_expected.to route_http(:get, "/foo").to(:some_http_callback) }
 
-      .alert.alert-warning
-        %strong Important!
-        These routing helpers bypass authorization for routes restricted to authorization groups.
+            # Event routes
+            it { is_expected.to route_event(:some_event) }
+            it { is_expected.to route_event(:some_event).to(:some_event_callback) }
 
-      .alert.alert-info As always, be careful when making negative message expectations, as a route might fail to match for a reason other than why you think. Positive message expectations are always preferred when possible.
+      %p Matchers with a fluent (chained) interface make the expectation more specific. If the name of a route is not specified, RSpec will only verify that the message, HTTP request, or event routes to <em>any</em> callback. The <code>with_authorization_for</code> method is necessary to verify routes that are restricted to certain authorization groups.
+
+      %p Each of these matchers can be turned into a negative expectation by writing <code>is_expected.not_to</code> instead of <code>is_expected.to</code>. The matchers themselves are the same in both positive and negative forms.
+
+      .alert.alert-info
+        %strong Note:
+        As always, be careful when making negative message expectations, as a route might fail to match for a reason other than why you think. Positive message expectations are always preferred when possible.
 
       %h4#testing-behavior Testing behavior
 
-      %p Since the behavioral logic in handlers are just regular instance methods, you can unit test them just as you would any other methods in a Ruby class. However, if you prefer more of an integration testing approach, there are some helper methods available to assist with this.
+      %p Since the behavioral logic in handlers are just regular instance methods (unless you use the defined callbacks with a block), you can unit test them just as you would any other methods in a Ruby class. However, if you prefer more of an integration testing approach, there are some helper methods available to assist with this.
 
       %p To send a message to the robot, use <code>send_message</code> and <code>send_command</code>. Then set expectations about the contents of the <code>replies</code> array.
 
@@ -148,3 +142,19 @@ title: "Plugin Authoring: Testing"
               send_message("I'm happy!", as: carl)
               expect(replies.last).to eq("Hey, everyone! Carl is happy! Isn't that nice?")
             end
+
+      %p To test the behavior of an HTTP route callback, use the <code>http</code> method. This method returns a <code>Faraday::Connection</code> object. Call one of the standard HTTP verb methods on this object to make an HTTP request and return a response. Then you can set expectations about the response.
+
+      %pre
+        %code.ruby
+          :preserve
+            describe "#foo" do
+              it "writes 'bar' to the page" do
+                response = http.get("/foo")
+                expect(response.body).to eq("bar")
+              end
+            end
+
+      .alert.alert-info
+        %strong Note:
+        The <code>http</code> method requires that the <code>rack-test</code> gem be part of your bundle, either in the Gemfile or set as a development dependency in your plugin's gemspec.
