--- a/source/layouts/layout.haml
+++ b/source/layouts/layout.haml
@@ -61,6 +61,7 @@
           %li= link_to 'Twitter', 'https://twitter.com/litachatbot'
           %li= link_to 'Mailing List', 'https://groups.google.com/group/litaio'
           %li= link_to 'IRC', 'http://webchat.freenode.net/?channels=lita.io'
+          %li= link_to 'Stickers', 'http://www.stickermule.com/marketplace/2466-lita'
         %ul.nav.navbar.nav.navbar-right
           %li
             .navbar-text= "© #{Time.new.year} Lita.io"
