Fix copy/paste error.

--- a/source/getting-started/configuration.html.haml
+++ b/source/getting-started/configuration.html.haml
@@ -148,7 +148,7 @@ title: "Getting Started: Configuration"
             %code config.adapters
           %td
             %code Object
-          %td Adapters may choose to expose a config object here with their own options. See the handler's documentation.
+          %td Adapters may choose to expose a config object here with their own options. See the adapter's documentation.
           %td N/A
         %tr
           %td
