Document the "users find" command.

--- a/source/getting-started/_menu.haml
+++ b/source/getting-started/_menu.haml
@@ -25,6 +25,7 @@
         %li= link_to 'Basic info', '/getting-started/usage/#basic-info'
         %li= link_to 'Managing rooms', '/getting-started/usage/#managing-rooms'
         %li= link_to 'Authorization groups', '/getting-started/usage/#authorization-groups'
+        %li= link_to 'User info', '/getting-started/usage/#user-info'
     %li
       = link_to 'Deployment', '/getting-started/deployment/'
       %ul
