--- a/source/getting-started/configuration.html.haml
+++ b/source/getting-started/configuration.html.haml
@@ -88,7 +88,7 @@ title: "Getting Started: Configuration"
             %code config.robot.admins
           %td
             %code Array&lt;String&gt;
-          %td An array of string user IDs which tell Lita which users are considered administrators. Only these users will have access to Lita's "auth" command.
+          %td An array of string user IDs which tell Lita which users are considered administrators. Only these users will have access to Lita's "auth" command. The IDs needed for this attribute can be found using the built-in <a href="/getting-started/usage/#user-info">user info</a> command.
           %td
             %code nil
         %tr
