--- a/source/getting-started/usage.html.haml
+++ b/source/getting-started/usage.html.haml
@@ -132,3 +132,15 @@ title: "Getting Started: Usage"
             Lita: karma_admins: You
 
       %p In the add and remove commands, the user can be specified by their unique ID, their display name, or their "mention name," on chat services that have such a user property.
+
+      %h3#user-info User info
+
+      %p Lita stores a record for each user it encounters with information including their name, their "mention name," and a unique ID that never changes. The <code>config.robot.admins</code> configuration attribute requires the unique IDs of users that should be considered administrators. With some adapters, this ID may not be something you can determine from the chat service's user interface. Fortunately, you can look up the basic information stored for each user by sending the <code>users find</code> command to Lita:
+
+      %pre
+        %code
+          :preserve
+            You: Lita users find joe
+            Lita: Joe (ID: U92CJ39, Mention name: joe)
+
+      %p The value at the end of the <code>users find</code> command is a search term that can be the user's ID, display name, or mention name. If a matching user is found, Lita will reply with the user's information. The ID displayed in the response is the ID that should be used to mark this user as an administrator via the <code>config.robot.admins</code> attribute in the <code>lita_config.rb</code> file.
