Document how to use extensions. Closes #4.

--- a/source/plugin-authoring/_menu.haml
+++ b/source/plugin-authoring/_menu.haml
@@ -36,6 +36,7 @@
       %ul
         %li= link_to 'Hooks', '/plugin-authoring/extensions/#hooks'
         %li= link_to 'Examples', '/plugin-authoring/extensions/#examples'
+        %li= link_to 'Using Extensions', '/plugin-authoring/extensions/#using-extensions'
     %li
       = link_to 'Testing', '/plugin-authoring/testing/'
       %ul
