--- a/source/layouts/outer.haml
+++ b/source/layouts/outer.haml
@@ -4,10 +4,7 @@
     %meta{ content: "IE=edge,chrome=1", "http-equiv" => "X-UA-Compatible" }
     %meta{ name: "viewport", content: "width=device-width, initial-scale=1.0" }
     = favicon_tag "images/favicon.ico"
-    - if current_page.data.title
-      %title= current_page.data.title ? "#{current_page.data.title} - Lita.io" : "Documentation - Lita.io"
-    - else
-      %title Documentation - Lita.io
+    %title= title_tag
     - if current_page.data.description
       %meta{ name: "description", content: current_page.data.description }
     - else
