--- a/source/plugin-authoring/_menu.haml
+++ b/source/plugin-authoring/_menu.haml
@@ -23,6 +23,7 @@
         %li= link_to 'Helper methods', '/plugin-authoring/handlers/#helper-methods'
         %li= link_to 'Timers', '/plugin-authoring/handlers/#timers'
         %li= link_to 'Configuration', '/plugin-authoring/handlers/#configuration'
+        %li= link_to 'Templates', '/plugin-authoring/handlers/#templates'
         %li= link_to 'Examples', '/plugin-authoring/handlers/#examples'
     %li
       = link_to 'Configuration', '/plugin-authoring/configuration/'
