Update installation guide for the Docker-based dev env.

--- a/source/getting-started/_menu.haml
+++ b/source/getting-started/_menu.haml
@@ -8,7 +8,7 @@
     %li
       = link_to 'Installation', '/getting-started/installation/'
       %ul
-        %li= link_to 'Vagrant', '/getting-started/installation/#vagrant'
+        %li= link_to 'Development Environment', '/getting-started/installation/#development-environment'
       %ul
         %li= link_to 'Manual installation', '/getting-started/installation/#manual-installation'
     %li= link_to 'Plugins', '/getting-started/plugins/'
