--- a/source/plugin-authoring/_menu.haml
+++ b/source/plugin-authoring/_menu.haml
@@ -12,6 +12,7 @@
         %li= link_to 'Configuration', '/plugin-authoring/adapters/#configuration'
         %li= link_to 'Required methods', '/plugin-authoring/adapters/#required-methods'
         %li= link_to 'Helper methods', '/plugin-authoring/adapters/#helper-methods'
+        %li= link_to 'Chat-service-specific methods', '/plugin-authoring/adapters/#chat-service'
         %li= link_to 'Block syntax', '/plugin-authoring/adapters/#block-syntax'
     %li
       = link_to 'Handlers', '/plugin-authoring/handlers/'
@@ -23,7 +24,7 @@
         %li= link_to 'Helper methods', '/plugin-authoring/handlers/#helper-methods'
         %li= link_to 'Timers', '/plugin-authoring/handlers/#timers'
         %li= link_to 'Configuration', '/plugin-authoring/handlers/#configuration'
-        %li= link_to 'Templates', '/plugin-authoring/handlers/#templates'
+        %li= link_to 'Chat-service-specific methods', '/plugin-authoring/handlers/#chat-service'
         %li= link_to 'Examples', '/plugin-authoring/handlers/#examples'
     %li
       = link_to 'Configuration', '/plugin-authoring/configuration/'
