Remove jQuery, update hljs to 8.8.0 with more syntaxes.

--- a/source/layouts/outer.haml
+++ b/source/layouts/outer.haml
@@ -62,5 +62,5 @@
         %ul.nav.navbar.nav.navbar-right
           %li
             .navbar-text= "© #{Time.new.year} Lita.io"
-    = javascript_include_tag '//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js', 'application'
+    = javascript_include_tag 'application'
 
