Add Docker section to the deployment page.

--- a/source/getting-started/_menu.haml
+++ b/source/getting-started/_menu.haml
@@ -29,6 +29,7 @@
     %li
       = link_to 'Deployment', '/getting-started/deployment/'
       %ul
+        %li= link_to 'Docker', '/getting-started/deployment/#docker'
         %li= link_to 'Heroku', '/getting-started/deployment/#heroku'
         %li= link_to 'Daemonization', '/getting-started/deployment/#daemonization'
     %li
