Move lita repo to litaio org.

--- a/source/layouts/outer.haml
+++ b/source/layouts/outer.haml
@@ -54,7 +54,7 @@
     %footer
       .container
         %ul.nav.navbar-nav
-          %li= link_to 'GitHub', 'https://github.com/jimmycuadra/lita'
+          %li= link_to 'GitHub', 'https://github.com/litaio/lita'
           %li= link_to 'Twitter', 'https://twitter.com/litachatbot'
           %li= link_to 'Mailing List', 'https://groups.google.com/group/litaio'
           %li= link_to 'IRC', 'http://webchat.freenode.net/?channels=lita.io'
