Update gems and configuration.

--- a/source/stylesheets/application.css.sass
+++ b/source/stylesheets/application.css.sass
@@ -1,5 +1,6 @@
-@import bootstrap
-@import github.hljs
+@import "bootstrap-sprockets"
+@import "bootstrap"
+@import "github.hljs"
 
 // Bootstrap overrides
 
