Update README and various non-secure links.

--- a/source/layouts/plugins.haml
+++ b/source/layouts/plugins.haml
@@ -24,8 +24,8 @@
           %li= link_to 'GitHub', 'https://github.com/litaio/lita'
           %li= link_to 'Twitter', 'https://twitter.com/litachatbot'
           %li= link_to 'Mailing List', 'https://groups.google.com/group/litaio'
-          %li= link_to 'IRC', 'http://webchat.freenode.net/?channels=lita.io'
-          %li= link_to 'Stickers', 'http://www.stickermule.com/marketplace/2466-lita'
+          %li= link_to 'IRC', 'https://webchat.freenode.net/?channels=lita.io'
+          %li= link_to 'Stickers', 'https://www.stickermule.com/marketplace/2466-lita'
         %ul.nav.navbar.nav.navbar-right
           %li
             .navbar-text= "© #{Time.new.year} Lita.io"
