--- a/source/plugins/index.html.haml
+++ b/source/plugins/index.html.haml
@@ -2,7 +2,7 @@
   .page-header
     %h1 Plugins
 
-  %p The following is a list of all plugins available for Lita. Plugins are distributed as gems. To have your plugin added to this list, simply publish it to RubyGems. Consult <a href="http://docs.lita.io/plugin-authoring/publishing/">publishing</a> on the plugin authoring page for details.
+  %p The following is a list of all plugins available for Lita. Plugins are distributed as gems. To have your plugin added to this list, simply publish it to RubyGems. Consult <a href="https://docs.lita.io/plugin-authoring/publishing/">publishing</a> on the plugin authoring page for details.
 
   .well
     %p Jump to:
