--- a/source/www/support.html.haml
+++ b/source/www/support.html.haml
@@ -20,7 +20,7 @@
       = link_to 'Mailing List', 'https://groups.google.com/group/litaio'
       (Google Groups)
     %li
-      = link_to 'IRC', 'http://webchat.freenode.net/?channels=lita.io'
+      = link_to 'IRC', 'https://webchat.freenode.net/?channels=lita.io'
       (<em>#lita.io</em> on the Freenode network)
 
   %h2 Bug reports
