Use full URL for favicon link.

--- a/source/layouts/docs_outer.haml
+++ b/source/layouts/docs_outer.haml
@@ -3,7 +3,7 @@
   %head
     %meta{ content: "IE=edge,chrome=1", "http-equiv" => "X-UA-Compatible" }
     %meta{ name: "viewport", content: "width=device-width, initial-scale=1.0" }
-    = favicon_tag "images/favicon.ico"
+    = favicon_tag "https://static.lita.io/images/favicon.ico"
     %title= title_tag
     - if current_page.data.description
       %meta{ name: "description", content: current_page.data.description }
