--- a/source/layouts/plugins.haml
+++ b/source/layouts/plugins.haml
@@ -4,7 +4,7 @@
     %meta{ charset: "utf-8" }
     %meta{ content: "IE=edge,chrome=1", "http-equiv" => "X-UA-Compatible" }
     %meta{ name: "viewport", content: "width=device-width, initial-scale=1.0" }
-    = favicon_tag "images/favicon.ico"
+    = favicon_tag "https://static.lita.io/images/favicon.ico"
     %title Lita Plugins - Lita.io
     = stylesheet_link_tag 'plugins'
   %body
