--- a/source/layouts/www.haml
+++ b/source/layouts/www.haml
@@ -4,7 +4,7 @@
     %meta{ charset: "utf-8" }
     %meta{ content: "IE=edge,chrome=1", "http-equiv" => "X-UA-Compatible" }
     %meta{ name: "viewport", content: "width=device-width, initial-scale=1.0" }
-    = favicon_tag "images/favicon.ico"
+    = favicon_tag "https://static.lita.io/images/favicon.ico"
     - if content_for?(:title)
       %title= "#{yield_content(:title)} - Lita.io"
     - else
