--- a/source/layouts/docs_outer.haml
+++ b/source/layouts/docs_outer.haml
@@ -16,7 +16,7 @@
         = docs_link 'Lita Documentation', '/', class: 'navbar-brand hidden-xs'
         %ul.nav.navbar-nav.navbar-right
           %li.dropdown
-            = docs_link 'Getting Started <b class="caret"></b>', '/getting-started/'
+            = docs_link 'User Guide <b class="caret"></b>', '/getting-started/'
             %ul.dropdown-menu
               %li= docs_link 'Overview', '/getting-started/'
               %li= docs_link 'Installation', '/getting-started/installation/'
@@ -26,7 +26,7 @@
               %li= docs_link 'Deployment', '/getting-started/deployment/'
               %li= docs_link 'Versioning Policy', '/getting-started/versioning-policy/'
           %li.dropdown
-            = docs_link 'Plugin Authoring <b class="caret"></b>', '/plugin-authoring/'
+            = docs_link 'Plugin Authoring Guide <b class="caret"></b>', '/plugin-authoring/'
             %ul.dropdown-menu
               %li= docs_link 'Overview', '/plugin-authoring/'
               %li= docs_link 'Adapters', '/plugin-authoring/adapters/'
