--- a/source/www/support.html.haml
+++ b/source/www/support.html.haml
@@ -9,8 +9,9 @@
   %h2 Documentation
 
   %ul
-    %li= docs_link 'Main documentation', '/'
-    %li= link_to 'Ruby API Documentation', 'http://rdoc.info/gems/lita/frames'
+    %li= docs_link 'User Guide', '/getting-started/'
+    %li= docs_link 'Plugin Authoring Guide', '/plugin-authoring/'
+    %li= link_to 'API Reference', 'http://rdoc.info/gems/lita'
 
   %h2 Questions, feedback, and discussion
 
