Moved to font-awesome and changed to use better icons

--- a/source/layouts/docs_outer.haml
+++ b/source/layouts/docs_outer.haml
@@ -41,7 +41,7 @@
             %ul.dropdown-menu
               %li= docs_link 'Lita 4', '/releases/4/'
               %li= docs_link 'Lita 3', '/releases/3/'
-          %li.navbar-link= www_link 'Lita.io <span class="glyphicon glyphicon-arrow-right"></span>', '/'
+          %li.navbar-link= www_link "Lita.io #{icon('long-arrow-right')}", '/'
     .content
       = yield
     %footer
