--- a/source/layouts/plugins.haml
+++ b/source/layouts/plugins.haml
@@ -15,7 +15,7 @@
         %ul.nav.navbar-nav.navbar-right
           %li= docs_link 'Documentation', '/'
           %li= www_link 'Support', '/support/'
-          %li.navbar-link= www_link 'Lita.io <span class="glyphicon glyphicon-arrow-right"></span>', '/'
+          %li.navbar-link= www_link "Lita.io #{icon('long-arrow-right')}", '/'
     .content
       = yield
     %footer
