--- a/source/stylesheets/docs.css.sass
+++ b/source/stylesheets/docs.css.sass
@@ -1,5 +1,4 @@
-@import "bootstrap-sprockets"
-@import "bootstrap"
+@import "bootstrap-custom"
 @import "github.hljs"
 
 // Bootstrap overrides
@@ -9,9 +8,6 @@ body
 
 .navbar
   margin-bottom: 0
-
-.glyphicon
-  vertical-align: -10%
 
 .dropdown:hover > .dropdown-menu
   display: block
