--- a/source/stylesheets/www.css.sass
+++ b/source/stylesheets/www.css.sass
@@ -1,5 +1,4 @@
-@import "bootstrap-sprockets"
-@import "bootstrap"
+@import "bootstrap-custom"
 @import "github-buttons"
 @import "twitter-buttons"
 
@@ -10,9 +9,6 @@ body
 
 .navbar
   margin-bottom: 0
-
-.glyphicon
-  vertical-align: -10%
 
 // Custom styles
 
