--- a/source/www/index.html.haml
+++ b/source/www/index.html.haml
@@ -24,38 +24,38 @@
   .row.spacer.text-c
     .col-md-4
       %h3
-        .icon-lg.glyphicon.glyphicon-fast-forward
+        =icon('gears', 'icon-lg')
         Automate tasks
       Turn tedious, time-consuming, and error-prone tasks into simple commands.
     .col-md-4
       %h3
-        .icon-lg.glyphicon.glyphicon-eye-open
+        =icon('eye', 'icon-lg')
         Provide visibility
       Using chat as the primary interface for business operations lets everyone see what's happening all the time.
     .col-md-4
       %h3
-        .icon-lg.glyphicon.glyphicon-user
+        =icon('users', 'icon-lg')
         Build a culture
       Having fun with your robot forms bonds and develops a sense of community.
 
   .row.spacer
     .col-md-3
       %h4
-        .icon-lg.glyphicon.glyphicon-heart
+        =icon('heart', 'icon-lg')
         Built with Ruby
       Lita is written in <a href="https://www.ruby-lang.org/">Ruby</a>, a powerful, easy to learn programming language.
     .col-md-3
       %h4
-        .icon-lg.glyphicon.glyphicon-gift
+        =icon('gift', 'icon-lg')
         Free and open source
       Lita is free to use and the source code is available on <a href="https://github.com/litaio/lita">GitHub</a>.
     .col-md-3
       %h4
-        .icon-lg.glyphicon.glyphicon-ok-sign
+        =icon('comments', 'icon-lg')
         Pick your chat service
       Lita works with any chat service, including IRC, HipChat, and Campfire.
     .col-md-3
       %h4
-        .icon-lg.glyphicon.glyphicon-wrench
+        =icon('plug', 'icon-lg')
         Extend with plugins
       Install <a href="https://plugins.lita.io/">plugins</a> from those already published, or write your own.
