--- a/source/stylesheets/plugins.css.sass
+++ b/source/stylesheets/plugins.css.sass
@@ -1,5 +1,4 @@
-@import bootstrap-sprockets
-@import bootstrap
+@import "bootstrap-custom"
 
 // Bootstrap overrides
 
@@ -8,9 +7,6 @@ body
 
 .navbar
   margin-bottom: 0
-
-.glyphicon
-  vertical-align: -10%
 
 // Custom styles
 
