If a plugin doesn't have a runtime dependency on lita, don't try to parse its requirements list, and don't try to list its required lita version on the plugins page.

--- a/source/plugins/_plugin.html.haml
+++ b/source/plugins/_plugin.html.haml
@@ -13,5 +13,6 @@
     %p.text-right
       %strong
         %span= "Latest version: #{plugin.version}"
-        %br
-        %span= "Required Lita version: #{plugin.requirements_list}"
+        - unless plugin.requirements_list.nil?
+          %br
+          %span= "Required Lita version: #{plugin.requirements_list}"
